# bella-calda

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  config_logging.py  database.py  main.py
app/api/: main.py
app/api/routes/: auth.py  driver.py  orders.py
app/auth/: dependencies.py  utils.py
app/crud/: __init__.py  cluster.py  driver.py  order.py  user.py
app/models/: cluster.py  driver.py  order.py  user.py
app/schemas/: __init__.py  cluster.py  driver.py  order.py  user.py
app/services/order_cluster/: __init__.py  order_cluster.py
app/services/orders/: __init__.py  orders_optimizer.py
app/services/route_planner/: __init__.py  base.py  factory.py  open_route_service.py
scripts/: constants.py  create_order.py  create_tables.py  create_user.py  generate_addresses.py  generate_orders.py
tests/: conftest.py
tests/fixtures/: optimizer_fixtures.py
tests/optimizer/: test_optimizer.py
tests/routes/: test_routes.py
